# CLion_Bug_--include

./: CMakeLists.txt  README.md
example1/: CMakeLists.txt
example1/src/: core.hpp  main.cpp
example2/: CMakeLists.txt
example2/src/: core.hpp  main.cpp
example3/: CMakeLists.txt
example3/src/: class_a.cpp  class_a.hpp  class_b.cpp  class_b.hpp  core.hpp  main.cpp
